# simple-rag

./: .gitignore  README.md  agent.ipynb  build_models_ru.md  hello.py  llm_steps_and_cycles.ipynb  main.py  pyproject.toml  rag_1-gigachat.ipynb  rag_1.ipynb  rag_2_advanced.ipynb  rag_qna.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml  rag_1-checkpoint.ipynb  rag_1-gigachat-checkpoint.ipynb  rag_2_advanced-checkpoint.ipynb
assets/: sample_qna.csv  support_kbase.csv
demo/: rag_1.html  rag_2_advanced.html
notebooks/: agent.ipynb  agent_validation.ipynb  multi_agent.ipynb  rag_qna.ipynb  test.ipynb
simple_rag/: __init__.py  embeddings.py  logger.py
simple_rag/chats/: __init__.py  chat.py  history.py
simple_rag/knowledge_base/: base.py  default_store.py  manager.py
simple_rag/knowledge_base/store/: db_engine.py  default_entity.py  default_store.py  vectorizer.py
simple_rag/llm/: __init__.py  groq.py
simple_rag/metrics/: __init__.py  kbase_metric.py
simple_rag/models/: __init__.py  stub_model.py
simple_rag/models/classic_static_file_rag/: __init__.py  chat_model.py  (+7 more)
simple_rag/qna/: csv_parser.py  pseudo_db.py  qna_parser.py
simple_rag/qna_rag/: engine.py  memory.py  prompts.py  service.py  store.py
simple_rag/rag/: engine.py  prompts.py  qna_service.py  state.py  store.py
simple_rag/web/: __init__.py  config.py  context.py  contextmanager.py
src/simple_rag/: __init__.py
tests/: test_chat.py  test_chat_manager.py  test_combined_store.py  test_knowledge_base.py  test_logger.py  test_model_creation.py  test_qna_db.py  test_summarizer.py
(+32 files in other folders)
