[project]
name = "dyi-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.6",
    "langchain[groq]>=0.3.18",
    "langgraph>=0.2.72",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
